--- a/pioneer/etc/config
+++ b/pioneer/etc/config
@@ -2,6 +2,8 @@ CommonBehavior.Endpoints=tcp -p 10040
 
 # Endpoints for implements interfaces
 DifferentialRobot.Endpoints=tcp -p 10004
+# Endpoints for subscriptions interfaces
+JoystickAdapterTopic.Endpoints=tcp -p 11231
 
 
 
