--- a/pioneer/pioneerPyrep/etc/config
+++ b/pioneer/pioneerPyrep/etc/config
@@ -1,7 +1,7 @@
 # Endpoints for implements interfaces
 CameraRGBDSimple.Endpoints=tcp -p 10096
 Laser.Endpoints=tcp -p 10003
-OmniRobot.Endpoints=tcp -p 10004
+DifferentialRobot.Endpoints=tcp -p 10004
 CoppeliaUtils.Endpoints = tcp -p 10666
 
 
