--- a/pioneer/pioneer_robot/src/CMakeLists.txt
+++ b/pioneer/pioneer_robot/src/CMakeLists.txt
@@ -24,7 +24,9 @@ SET ( SOURCES
   genericmonitor.cpp
   commonbehaviorI.cpp
   genericworker.cpp
+  batterystatusI.cpp
   differentialrobotI.cpp
+  ultrasoundI.cpp
   joystickadapterI.cpp
 )
 
@@ -36,8 +38,8 @@ FIND_PACKAGE( Ice REQUIRED COMPONENTS Ice++11 IceStorm++11)
 
 #ROBOCOMP
 ROBOCOMP_INITIALIZE( $ENV{ROBOCOMP}/ )
-ROBOCOMP_IDSL_TO_ICE( CommonBehavior DifferentialRobot GenericBase JoystickAdapter)
-ROBOCOMP_ICE_TO_SRC( CommonBehavior DifferentialRobot GenericBase JoystickAdapter)
+ROBOCOMP_IDSL_TO_ICE( CommonBehavior BatteryStatus DifferentialRobot GenericBase JoystickAdapter Ultrasound)
+ROBOCOMP_ICE_TO_SRC( CommonBehavior BatteryStatus DifferentialRobot GenericBase JoystickAdapter Ultrasound)
 SET (EXECUTABLE_OUTPUT_PATH ${RC_COMPONENT_DEVEL_PATH}/bin)
 
 
