--- a/pioneer/pioneer_robot/etc/config
+++ b/pioneer/pioneer_robot/etc/config
@@ -2,6 +2,8 @@ CommonBehavior.Endpoints=tcp -p 10040
 
 # Endpoints for implements interfaces
 DifferentialRobot.Endpoints=tcp -p 10004
+BatteryStatus.Endpoints=tcp -p 10014
+Ultrasound.Endpoints=tcp -p 10015
 
 # Endpoints for subscriptions interfaces
 JoystickAdapterTopic.Endpoints=tcp -p 11231
