--- a/pioneer/pioneerPyrep/etc/config
+++ b/pioneer/pioneerPyrep/etc/config
@@ -3,7 +3,10 @@ CameraRGBDSimple.Endpoints=tcp -p 10096
 Laser.Endpoints=tcp -p 10003
 DifferentialRobot.Endpoints=tcp -p 10004
 CoppeliaUtils.Endpoints = tcp -p 10666
-
+FullPoseEstimation.Endpoints=tcp -p 10016
+Ultrasound.Endpoints=tcp -p 10015
+BatteryStatus.Endpoints=tcp -p 10014
+RSSIStatus.Endpoints=tcp -p 10017
 
 # Endpoints for subscriptions interfaces
 JoystickAdapterTopic.Endpoints=tcp -p 13100
