--- a/gen3/gen3Pyrep/etc/config
+++ b/gen3/gen3Pyrep/etc/config
@@ -1,8 +1,9 @@
 # Endpoints for implements interfaces
 CameraRGBDSimple.Endpoints=tcp -p 10096
-Laser.Endpoints=tcp -p 10003
+KinovaArm.Endpoints=tcp -p 10013
 OmniRobot.Endpoints=tcp -p 10004
 CoppeliaUtils.Endpoints = tcp -p 10666
+
 
 
 # Endpoints for subscriptions interfaces
