--- a/pioneer/pioneer_controller/etc/config
+++ b/pioneer/pioneer_controller/etc/config
@@ -1,12 +1,13 @@
 CommonBehavior.Endpoints=tcp -p 10300
 
 # Proxies for required interfaces
-BatteryStatusProxy = batterystatus:tcp -h 158.49.247.155 -p 10014
-CameraRGBDSimpleProxy = camerargbdsimple:tcp -h 158.49.247.155 -p 10178
-DifferentialRobotProxy = differentialrobot:tcp -h 158.49.247.155 -p 10004
-FullPoseEstimationProxy = fullposeestimation:tcp -h 158.49.247.155 -p 10696
-RSSIStatusProxy = rssistatus:tcp -h 158.49.247.155 -p 10016
-UltrasoundProxy = ultrasound:tcp -h 158.49.247.155 -p 10017
+BatteryStatusProxy = batterystatus:tcp -h 158.49.247.172 -p 10014
+CameraRGBDSimpleProxy = camerargbdsimple:tcp -h 158.49.247.172 -p 10178
+CameraRGBDSimple1Proxy = camerargbdsimple:tcp -h 158.49.247.172 -p 10179
+DifferentialRobotProxy = differentialrobot:tcp -h 158.49.247.172 -p 10004
+FullPoseEstimationProxy = fullposeestimation:tcp -h 158.49.247.172 -p 10216
+RSSIStatusProxy = rssistatus:tcp -h 158.49.247.172 -p 10016
+UltrasoundProxy = ultrasound:tcp -h 158.49.247.172 -p 10017
 InnerModelPath = ../../etc/simpleworldomni.xml
 
 Ice.Warn.Connections=0
