--- a/pioneer/pioneer_dsr/etc/config
+++ b/pioneer/pioneer_dsr/etc/config
@@ -14,6 +14,7 @@ tree_view = false
 graph_view = true
 2d_view = true
 3d_view = false
+robot_real = true
 
 Ice.Warn.Connections=0
 Ice.Trace.Network=0
