--- a/gen3/gen3controller/etc/config
+++ b/gen3/gen3controller/etc/config
@@ -1,6 +1,8 @@
 # Proxies for required interfaces
 CameraRGBDSimpleProxy = camerargbdsimple:tcp -h localhost -p 10096
 KinovaArmProxy = kinovaarm:tcp -h localhost -p 10013
+CoppeliaUtilsProxy = coppeliautils:tcp -h localhost -p 10666
+
 
 
 # This property is used by the clients to connect to IceStorm.
