--- a/pioneer/pioneer_dual_realsense/etc/config
+++ b/pioneer/pioneer_dual_realsense/etc/config
@@ -4,12 +4,13 @@ CommonBehavior.Endpoints=tcp -p 10111
 CameraRGBDSimple.Endpoints=tcp -p 10096
 Laser.Endpoints=tcp -p 10003
 
-device_serial_left=839112061901
-device_serial_right=839112060624
-display=true
+device_serial_left=049522250171
+device_serial_right=046322251148
+display=false
 
 
 Ice.Warn.Connections=0
 Ice.Trace.Network=0
 Ice.Trace.Protocol=0
 Ice.MessageSizeMax=20004800
+
