--- a/pioneer/pioneer_dsr/etc/config
+++ b/pioneer/pioneer_dsr/etc/config
@@ -13,7 +13,7 @@ agent_id = 30 # Change id
 agent_name = pioneer_dsr
 tree_view = false
 graph_view = true
-2d_view = false
+2d_view = true
 3d_view = false
 robot_real = true
 
