--- a/pioneer/realsense_pose_estimation/etc/config
+++ b/pioneer/realsense_pose_estimation/etc/config
@@ -5,7 +5,7 @@ FullPoseEstimation.Endpoints=tcp -p 10216
 #serial=905312110667
 device_serial=925122110807
 
-print=true
+print=false
 
 # This property is used by the clients to connect to IceStorm.
 TopicManager.Proxy=IceStorm/TopicManager:default -p 9999
