--- a/pioneer/realsense_pose_estimation/etc/config
+++ b/pioneer/realsense_pose_estimation/etc/config
@@ -1,9 +1,10 @@
 # Endpoints for implements interfaces
 FullPoseEstimation.Endpoints=tcp -p 10216
 
-device_serial=925122110585
+device_serial_back=925122110585
 #serial=905312110667
-#device_serial=925122110807
+device_serial_side=925122110807
+num_cameras = 2
 
 print=false
 
